--- a/style/modularity/module.css
+++ b/style/modularity/module.css
@@ -13,4 +13,12 @@
     border-radius: .25rem;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
   }
+  --basicModal: {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #0000004d;
+  }
 }
