add hash content fix in btn

--- a/src/components/simple-confirmation/SimpleConfirmation.html
+++ b/src/components/simple-confirmation/SimpleConfirmation.html
@@ -4,7 +4,9 @@
       <div class="dont-img-simple">
       </div>
       <div class="dont-modal-body"></div>
-      <div class="dont-modal-footer"><button class="dont-btn-success" id="dont-modal-cancel">Ok</button></div>
+      <div class="dont-modal-footer">
+        <button class="dont-btn-success" id="dont-modal-cancel">Ok</button>
+      </div>
     </div>
   </div>
 </div>
