--- a/src/components/simple-confirmation/SimpleConfirmation.html
+++ b/src/components/simple-confirmation/SimpleConfirmation.html
@@ -5,7 +5,7 @@
       </div>
       <div class="dont-modal-body"></div>
       <div class="dont-modal-footer">
-        <button class="dont-btn-success" id="dont-modal-cancel">Ok</button>
+        <!-- <button class="dont-btn-success" id="dont-modal-cancel">Ok</button> -->
       </div>
     </div>
   </div>
