--- a/src/components/simple-confirmation/simpleConfirmation.css
+++ b/src/components/simple-confirmation/simpleConfirmation.css
@@ -51,11 +51,11 @@
   border-top: 1px solid #e9ecef;
 }
 
-.dont-btn-success {
+.dont-btn-cancel {
   @apply --btn;
   color: #fff;
-  background-color: #28a745;
-  border-color: #28a745;
+  background-color: #c82333;
+  border-color: #bd2130;
 }
 
 .dont-img-modal {
